--- a/Shklift/Shklift.WebApp/src/components/Card/Card.css
+++ b/Shklift/Shklift.WebApp/src/components/Card/Card.css
@@ -1,25 +1,25 @@
 @keyframes card-left {
     0% {
-        left: -45%
+        translate: -100%
     }
     100% {
-        left: 0%
+        translate: 0%
     }
 }
 
 @keyframes card-right {
     0% {
-        right: -45%;
+        translate: 100%
     }
     100% {
-        right: 0%;
+        translate: 0%
     }
 }
 
 @keyframes card-input {
     0% {
         opacity: 10%;
-        top: -100%
+        translate: 0% -200%
     }
     33% {
         opacity: 50%;
@@ -28,7 +28,7 @@
         opacity: 100%;
     }
     100% {
-        top: 0%;
+        translate: 0% 0%;
         opacity: 100%;
     }
 }
